# red

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  cliff.toml  codemcp.toml  config.toml  default_config.toml  plan.md  test_config.toml  test_windows.sh  test_windows.txt  window-implementation-plan.md
.agents/skills/: good-pr
.aidocs/: agent-native-foundation-highlights-and-smoke-test.md
.cargo/: audit.toml
.claude/: settings.local.json
.github/: release-pr-body.md
crates/husk/: Cargo.toml
crates/husk-cli/: Cargo.toml
crates/husk-cli/src/: adapter_build.rs  adapter_install.rs  generic_specialization.rs  lib.rs  main.rs  package_install.rs  package_new.rs
crates/husk-cli/tests/: cli.rs
crates/husk-extension/: Cargo.toml
crates/husk-extension/src/: lib.rs
crates/husk-extension/tests/: bundle.rs
crates/husk-hir/: Cargo.toml
crates/husk-hir/src/: lib.rs
crates/husk-package/: Cargo.toml
crates/husk-package/src/: lib.rs
crates/husk-package/tests/: package.rs
crates/husk-parser/: Cargo.toml
crates/husk-parser/benches/: parser_benchmarks.rs
crates/husk-parser/examples/: profile_parser.rs
crates/husk-parser/src/: lib.rs
crates/husk-parser/tests/fixtures/: large.husk  medium.husk  small.husk
crates/husk-runtime/: Cargo.toml
crates/husk-runtime/src/: embedding.rs  lib.rs
crates/husk-semantic/: Cargo.toml
crates/husk-semantic/src/: lib.rs  stdlib_index.rs
crates/husk-semantic/src/std/js/: globals.hk
crates/husk-semantic/src/stdlib/: core.hk  native.hk
crates/husk-wasm/: Cargo.toml
crates/husk-wasm/examples/: feasibility.rs
crates/husk-wasm/src/: lib.rs
crates/husk-wasm/tests/fixtures/: resource.wat
crates/husk/examples/: regex_embed.rs
crates/husk/src/: lib.rs
crates/husk/tests/: compile_pipeline.rs  embedding_api.rs  native_language_features.rs  package_embedding.rs  runtime_conformance.rs  wasm_extension.rs
docs/: AGENT_PANE_UX_PLAN.md  AGENT_WORKFLOW.md  DEBUGGING.md  DETACH.md  EDIT_PIPELINE.md  GETTING_STARTED.md  HOT_RELOAD_PLAN.md  HUSK_ADD_CRATE_ADAPTERS_PLAN.md  HUSK_IMPLEMENTATION_STATUS.md  HUSK_LANGUAGE_EXTRACTION_PLAN.md  HUSK_LANGUAGE_GUIDE.md  HUSK_RUNTIME_SUPPORT_MATRIX.md  PLUGIN_API.md  PLUGIN_SYSTEM.md  PLUGIN_SYSTEM_IMPROVEMENTS.md  POST_FOUNDATION_SWEEP_PLAN_2026-07-11.md  PROJECT_PLAN.md  PROJECT_PLAN_IMPLEMENTATION.md  PROJECT_PLAN_V1.md  RELEASING.md  SESSION_RECOVERY.md  SPLASH.md  TIMER_IMPROVEMENTS.md  VIM_COMPATIBILITY.md  VIM_DOGFOOD.md  codex-integration-plan.md  husk-language-performance-baseline-2026-07-19.md  husk-wasm-feasibility-2026-07-19.md  multi-windows-plan.md  performance-baseline-2026-07-10.md  performance-baseline-2026-07-13.md  performance-baseline-2026-07-19.md  performance.md  plugin_api_changes.json  unicode-handling.md  unicode-implementation.md
examples/: README.md  async-plugin.test.js  buffer-picker.js  buffer-picker.test.js  husk_cursor_bench.rs  interval-demo.js  interval.test.js  logging-demo.js  timer-test.js  typescript-plugin.ts
install/: install.ps1  install.sh
plugins/: agent.hk  ask_ai.hk  barbecue.hk  barbecue.js  barbecue.test.js  buffer_picker.hk  buffer_picker.js  codex.ts  cool_search.hk  cool_search.js  cool_search.test.js  fidget.hk  fidget.js  git.hk  git.js  git.test.js  indent_guides.hk  indent_guides.js  indent_guides.test.js  inlay_hints.hk  inlay_hints.js  inlay_hints.test.js  lsp_symbols.hk  lsp_symbols.ts  neotree.hk  neotree.js  neotree.test.js  project_search.hk  project_search.js  project_search.test.js  session_restore.hk  session_restore.js  test.js  theme_browser.hk  theme_browser.js  theme_browser.test.js  unicode_demo.js  unicode_demo.md
scripts/: check-husk-independence.sh  check_markdown_links.py  detach_bench.py  fake-codex-app-server.py  git_workspace_bench.py  interaction_bench.py  readme_release.py  repository_inventory.py  scroll_bench.py  smoke-test-codex-live-app-server.sh  smoke-test-codex-turn.sh  smoke-test-codex-window.sh  test-codex-plugin-root-ids.sh  visual-test-codex.sh
src/: agent_check.rs  agent_tools.rs  agent_workspace.rs  assets.rs  assistant.rs  buffer.rs  cli.rs  clipboard.rs  color.rs  command.rs  command_palette.rs  comment.rs  config.rs  dispatcher.rs  editor.rs  editor_builder.rs  highlighter.rs  lib.rs  logger.rs  main.rs  matchit.rs  onboarding.rs  preferences.rs  self_check.rs  session.rs  splash.rs  sync.rs  test_utils.rs  theme.rs  undo.rs  unicode_utils.rs  utils.rs  window.rs
test-harness/: README.md  mock-red.js  test-runner.js
tests/: README.md  TESTING_PROPOSAL.md  acp_conformance.rs  agent_check.rs  buffer_text_git.rs  codex_acp.rs  codex_app_server.rs  completion.rs  detach.rs  editing.rs  insert.rs  lsp_lazy.rs  movement.rs  movement_test.rs  openai_acp.rs  self_check.rs  simple_unicode.rs  test_emoji_handling.rs  unicode.rs
themes/: THIRD_PARTY.md  andromeda-bordered.json  andromeda-colorizer.json  andromeda-italic-bordered.json  andromeda-italic.json  andromeda.json  atom-one-dark.json  atom-one-light.json  aura-dark-soft-text.json  aura-dark.json  aura-soft-dark-soft-text.json  aura-soft-dark.json  ayu-dark-bordered.json  ayu-dark.json  ayu-light-bordered.json  ayu-light.json  ayu-mirage-bordered.json  ayu-mirage.json  bamboo.json  bluloco-dark.json  bluloco-light.json  cobalt2.json  community-material-theme-darker-high-contrast.json  community-material-theme-darker.json  community-material-theme-high-contrast.json  community-material-theme-lighter-high-contrast.json  community-material-theme-lighter.json  community-material-theme-ocean-high-contrast.json  community-material-theme-ocean.json  community-material-theme-palenight-high-contrast.json  community-material-theme-palenight.json  community-material-theme.json  cyberdream.json  dracula-soft.json  dracula.json  duckbones.json  edge.json  everforest.json  fluoromachine.json  forestbones.json  (+91 more)
tools/husk-standalone/: Cargo.toml
tools/husk-standalone/smoke/: Cargo.toml
tools/husk-standalone/smoke/src/: main.rs
types/: README.md  package.json  red.d.ts
(+121 files in other folders)
