[package]
name = "red"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-recursion = "1.0.5"
crossterm = { version = "0.27.0", features = ["event-stream"] }
deno_ast = { version = "1.0.1", features = ["transpiling"] }
deno_core = "0.264.0"
futures = "0.3.30"
futures-timer = "3.0.2"
fuzzy-matcher = "0.3.7"
json_comments = "0.2.2"
nix = { version = "0.28.0", features = ["signal"] }
once_cell = "1.19.0"
path-absolutize = "3.1.1"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
