[package]
name = "red"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-recursion = "1.0.5"
async-trait = "0.1.77"
bon = "3.3.2"
clap = { version = "4.5.26", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
deno_ast = { version = "=0.53.2", features = ["transpiling"] }
deno_core = { version = "=0.403.0", features = ["include_icu_data"] }
deno_error = "=0.7.1"
futures = "0.3.30"
futures-timer = "3.0.2"
fuzzy-matcher = "0.3.7"
json_comments = "0.2.2"
lazy_static = "1.5.0"
nix = { version = "0.28.0", features = ["signal"] }
once_cell = "1.19.0"
path-absolutize = "3.1.1"
reqwest = "0.11.27"
regex = "1.11.1"
ropey = "1.6.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
similar = "2.6.0"
textwrap = "0.16"
thiserror = "1.0"
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.10"
tree-sitter = "0.25"
tree-sitter-bash = "0.25.1"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-md = "0.5.3"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.2"
uuid = { version = "1.12.0", features = ["v4"] }
