[package]
name = "red"
version = "0.1.1"
edition = "2021"
default-run = "red"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "crates/husk",
    "crates/husk-ast",
    "crates/husk-diagnostics",
    "crates/husk-lexer",
    "crates/husk-parser",
    "crates/husk-semantic",
    "crates/husk-types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/codersauce/red"

[workspace.dependencies]
husk-ast = { path = "crates/husk-ast" }
husk-diagnostics = { path = "crates/husk-diagnostics" }
husk-lexer = { path = "crates/husk-lexer" }
husk-parser = { path = "crates/husk-parser" }
husk-semantic = { path = "crates/husk-semantic" }
husk-types = { path = "crates/husk-types" }

[dependencies]
agent-client-protocol-schema = "=1.4.0"
anyhow = "1.0.79"
arboard = "3.4.1"
async-recursion = "1.0.5"
async-trait = "0.1.77"
bon = "3.3.2"
clap = { version = "4.5.26", features = ["derive", "env"] }
crossterm = { version = "0.27.0", features = ["event-stream", "serde"] }
futures = "0.3.30"
fuzzy-matcher = "0.3.7"
husk = { path = "crates/husk" }
husk-ast.workspace = true
husk-diagnostics.workspace = true
husk-lexer.workspace = true
husk-parser.workspace = true
husk-semantic.workspace = true
include_dir = "0.7.4"
ignore = "0.4.25"
json_comments = "0.2.2"
lazy_static = "1.5.0"
nix = { version = "0.28.0", features = ["fs", "process", "signal"] }
once_cell = "1.19.0"
path-absolutize = "3.1.1"
pulldown-cmark = "0.13"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ropey = "1.6.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
semver = "1.0"
similar = "2.6.0"
textwrap = "0.16"
tempfile = "3.15.0"
thiserror = "1.0"
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.10"
tree-sitter = "0.25"
tree-sitter-bash = "0.25.1"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-lua = "0.5.0"
tree-sitter-md = "0.5.3"
tree-sitter-python = "0.25.0"
tree-sitter-powershell = "0.26.4"
tree-sitter-rust = "0.24.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.2"
uuid = { version = "1.12.0", features = ["v4", "v5"] }

[target.'cfg(target_os = "macos")'.dependencies]
base64 = "0.22.1"
core-foundation = "0.9.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_UI_Shell",
] }
