[package]
name = "husk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedded Husk scripting runtime for Red"

[dependencies]
anyhow = "1.0.79"
husk-ast.workspace = true
husk-parser.workspace = true
serde_json = "1.0.113"
thiserror = "1.0"
