[package]
name = "husk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Public facade and embedding API for the Husk scripting language"

[features]
default = ["wasm-extensions"]
wasm-extensions = ["husk-runtime/wasm-extensions"]

[dependencies]
husk-runtime = { workspace = true, default-features = false }

[dev-dependencies]
anyhow = "1.0.79"
regex = "1.12"
serde_json = "1.0.113"
tempfile = "3.15.0"
