[workspace]
members = [
    "crates/husk",
    "crates/husk-ast",
    "crates/husk-cli",
    "crates/husk-diagnostics",
    "crates/husk-extension",
    "crates/husk-hir",
    "crates/husk-lexer",
    "crates/husk-package",
    "crates/husk-parser",
    "crates/husk-runtime",
    "crates/husk-semantic",
    "crates/husk-types",
    "crates/husk-value",
    "crates/husk-wasm",
    "smoke",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/codersauce/red"

[workspace.dependencies]
husk-ast = { version = "0.1.0", path = "crates/husk-ast" }
husk-diagnostics = { version = "0.1.0", path = "crates/husk-diagnostics" }
husk-extension = { version = "0.1.0", path = "crates/husk-extension" }
husk-hir = { version = "0.1.0", path = "crates/husk-hir" }
husk-lexer = { version = "0.1.0", path = "crates/husk-lexer" }
husk-package = { version = "0.1.0", path = "crates/husk-package" }
husk-parser = { version = "0.1.0", path = "crates/husk-parser" }
husk-runtime = { version = "0.1.0", path = "crates/husk-runtime", default-features = false }
husk-semantic = { version = "0.1.0", path = "crates/husk-semantic" }
husk-types = { version = "0.1.0", path = "crates/husk-types" }
husk-value = { version = "0.1.0", path = "crates/husk-value" }
husk-wasm = { version = "0.1.0", path = "crates/husk-wasm" }
